# Pytorch-Audio-Processing

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: config.yaml
data/: README.md
docs/: best_practices.md
scripts/: check_dataset_loader.py  simulate_edge_inference.py
src/: dataset.py  evaluate.py  model.py  preprocessing.py  train.py  utils.py
